kubernetes-manifests/paymentservice.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  labels:
    app: paymentservice
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /metrics
    spec:
      serviceAccountName: paymentservice
      terminationGracePeriodSeconds: 35
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: paymentservice
        ports:
        - name: health
          containerPort: 8080
        volumeMounts:
        - name: nats-ca
          mountPath: /etc/nats-ca
          readOnly: true
        readinessProbe:
          httpGet:
            path: /readyz
            port: health
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: health
          timeoutSeconds: 3
          failureThreshold: 6
        resources:
          requests:
            cpu: 225m
            memory: 128Mi
          limits:
            cpu: "2"
            memory: 2Gi
      volumes:
      - name: nats-ca
        configMap:
          name: nats-ca
