kubernetes-manifests/storefrontprojectionservice.yaml
# Copyright 2026 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");

apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefrontprojectionservice
  labels:
    app: storefrontprojectionservice
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: storefrontprojectionservice
  template:
    metadata:
      labels:
        app: storefrontprojectionservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /metrics
    spec:
      serviceAccountName: storefrontprojectionservice
      terminationGracePeriodSeconds: 35
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: storefrontprojectionservice
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: nats-ca
          mountPath: /etc/nats-ca
          readOnly: true
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 6
        resources:
          requests:
            cpu: 400m
            memory: 128Mi
          limits:
            cpu: "4"
            memory: 2Gi
      volumes:
      - name: nats-ca
        configMap:
          name: nats-ca
